--- a/main.html
+++ b/main.html
@@ -114,7 +114,7 @@
                 </form>c
             </section>
     </div>
-    <script src="script.js"></script>
+    <script src="contest.js"></script>
 </body>
 
 </html>
